create post api docs
